--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navMain">
           <ul class="navbar-nav ms-auto align-items-lg-center">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="index.html#features">Features</a></li>
-            <li class="nav-item"><a class="nav-link" href="index.html">Home Page</a></li>
             <li class="nav-item"><a class="nav-link" href="landing.html">Kursus Saham</a></li>
             <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html">About Us</a></li>
