--- a/landing.html
+++ b/landing.html
@@ -105,7 +105,7 @@
             <div class="card h-100">
               <div class="card-body">
                 <h6 class="fw-bold">Kredibel</h6>
-                <p class="text-secondary mb-0">Pengajar berlisensi WPPE, materi terverifikasi.</p>
+                <p class="mb-0">Pengajar berlisensi WPPE, materi terverifikasi.</p>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
             <div class="card h-100">
               <div class="card-body">
                 <h6 class="fw-bold">Praktis</h6>
-                <p class="text-secondary mb-0">Berbasis kasus nyata dan latihan langsung.</p>
+                <p class="mb-0">Berbasis kasus nyata dan latihan langsung.</p>
               </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
             <div class="card h-100">
               <div class="card-body">
                 <h6 class="fw-bold">Komunitas</h6>
-                <p class="text-secondary mb-0">Belajar bersama komunitas yang suportif.</p>
+                <p class="mb-0">Belajar bersama komunitas yang suportif.</p>
               </div>
             </div>
           </div>
