redirect to news detail

--- a/articles.html
+++ b/articles.html
@@ -42,7 +42,7 @@
               <div class="card-body">
                 <h5 class="card-title">Getting Started with Value Investing</h5>
                 <p class="card-text text-secondary">Understand intrinsic value, margin of safety, and long-term compounding.</p>
-                <a class="btn btn-outline-primary" href="#">Read more</a>
+                <a class="btn btn-outline-primary" href="news-detail.html">Read more</a>
               </div>
             </div>
           </div>
@@ -51,7 +51,7 @@
               <div class="card-body">
                 <h5 class="card-title">Risk Management 101</h5>
                 <p class="card-text text-secondary">Position sizing, diversification, and rules that protect your capital.</p>
-                <a class="btn btn-outline-primary" href="#">Read more</a>
+                <a class="btn btn-outline-primary" href="news-detail.html">Read more</a>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@
               <div class="card-body">
                 <h5 class="card-title">Understanding Market Cycles</h5>
                 <p class="card-text text-secondary">How sentiment and liquidity shape cycles and opportunities.</p>
-                <a class="btn btn-outline-primary" href="#">Read more</a>
+                <a class="btn btn-outline-primary" href="news-detail.html">Read more</a>
               </div>
             </div>
           </div>
